--- a/SSD_explained.ipynb
+++ b/SSD_explained.ipynb
@@ -1,114 +1,57 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "74418404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "import time\n",
-    "import os\n",
-    "from typing import Dict, Optional, Sequence, Tuple\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import imageio.v2 as imageio\n",
-    "\n",
-    "import torchvision\n",
-    "from torchvision.models.detection import (\n",
-    "    ssdlite320_mobilenet_v3_large,\n",
-    "    SSDLite320_MobileNet_V3_Large_Weights,\n",
-    "    ssd300_vgg16,\n",
-    "    SSD300_VGG16_Weights\n",
-    ")\n",
-    "from torchvision.transforms import v2\n",
-    "from torchvision.ops import box_iou, box_convert, complete_box_iou\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch.optim.lr_scheduler import StepLR\n",
-    "from torchmetrics.detection.mean_ap import MeanAveragePrecision\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import CarImageClass\n",
-    "\n",
-    "from SSD_from_scratch import mySSD\n",
-    "from SSD_trainer import SSD_train, plot_losses, collate_detection, ConditionalIoUCrop, load_checkpoint, build_targets\n",
-    "\n",
-    "# device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "# just use cpu for this file\n",
-    "device = 'cpu'\n",
-    "\n",
-    "# desktop or laptop\n",
-    "machine = 'laptop'\n",
-    "\n",
-    "# Setup path to data folder\n",
-    "if machine == 'laptop':\n",
-    "    folder_path = Path(r\"C:\\self-driving-car\\data\")\n",
-    "else:\n",
-    "    folder_path = Path(r\"C:\\Udacity_car_data\\data\")\n",
-    "\n",
-    "train_path = folder_path / \"train\"\n",
-    "test_path = folder_path / \"test\"\n",
-    "train_path_simple = folder_path / \"train_simple\"\n",
-    "test_path_simple = folder_path / \"test_simple\"\n",
-    "train_path_oo = folder_path / \"train_one_obj\"\n",
-    "test_path_oo = folder_path / \"test_one_obj\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f14ff500",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "a2f54a9a",
    "metadata": {},
    "source": [
-    "# How does a single shot detector (SSD) model work?"
+    "# How does a single shot detector (SSD) model work?\n",
+    "\n",
+    "The key ideas to understanding how the SSD model works are:\n",
+    "* Model architecture,\n",
+    "* Model outputs,\n",
+    "* Prior bounding boxes,\n",
+    "* Non maximum suppression."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2e578b85",
+   "id": "b85887e9",
    "metadata": {},
    "source": [
+    "### Prior bounding boxes\n",
+    "\n",
     "First, we need to understand the concept of *prior* bounding boxes, or just *priors*.  The model is equipped with a set of predetermined (by model architecture) priors.  In the case of this SSD model, it has 8732.  Priors are static and never change with model training.  Some of the priors are displayed below in red with the ground truth (GT) bounding box in green.\n",
     "\n",
     "![36 priors and a car](figures/priors_3.gif)\n",
     "![19*19*4 priors and a car](figures/priors_19.gif)\n",
     "![38*38*4 priors and a car](figures/priors_38.gif)\n",
     "\n",
-    "As we can see, the priors come in various sizes, since the objective is to be able to detect object of various size.  For this image, we can see the best priors for the GT box (according to an intersection over union score).\n",
+    "As we can see, the priors come in various sizes, since the objective is to be able to detect object of various size.  For this image, the priors that have an intersection over union (IoU) score greater than $0.5$ with the GT box are displayed.\n",
     "\n",
     "![Priors above IoU threshold](figures/priors_above_threshold.gif)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "80cd3c0b",
+   "id": "78c1a7c9",
    "metadata": {},
    "source": [
-    "### Model architecture and outputs\n",
-    "The key features of the model are six convolution layers, which feed into a classification head and localization head.  The name \"single shot detector\" was given since the model predicts class and location in one pass.  The image below is from the paper of W. Liu, et al. (see [here](https://link.springer.com/chapter/10.1007/978-3-319-46448-0_2)) which first introducted the SSD model.\n",
+    "### Multi-scale feature maps and head outputs\n",
+    "SSD uses six feature maps at different resolutions as detection heads.  The name \"single shot detector\" was given since the model predicts class and location in one pass.  The image below is from the paper of W. Liu, et al. (see [here](https://link.springer.com/chapter/10.1007/978-3-319-46448-0_2)) which first introduced the SSD model.\n",
     "\n",
     "![SSD model architecture by W. Liu, et al.](figures/SSD_architecture.png)\n",
     "\n",
     "\n",
-    "The ouput of the localization head corresponding to 'conv_4_3' in the image above is a tensor of size $(B, 4*4, 38, 38)$.  Let's breakdown the meaning of each dimension of this tensor (from left to right):\n",
+    "The output of the localization head corresponding to 'conv_4_3' in the image above is a tensor of size $(B, 4*4, 38, 38)$.  Let's breakdown the meaning of each dimension of this tensor (from left to right):\n",
     "\n",
     "* B: batch size\n",
-    "* 4: number of dimensions in a prior (the form here is $(x_{\\mathrm{min}}, y_{\\mathrm{min}},x_{\\mathrm{max}}, y_{\\mathrm{max}})$)\n",
+    "* 4: number of regression parameters per prior (the encoded offsets $(t_{x}, t_{y}, t_{w}, t_{h})$, see next section)\n",
     "* 4: number of priors per center\n",
     "* 38: feature map height\n",
     "* 38: feature map width\n",
     "\n",
-    "Repeating this process for all six of the convolution layers, the output of the localization head is comprised of tensors of size:\n",
+    "Repeating this process for all six of the feature maps, the output of the localization head is comprised of tensors of size:\n",
     "* $(B, 4*4, 38, 38)$ (from 'conv_4_3')\n",
     "* $(B, 4*6, 19, 19)$ (from 'conv_7')\n",
     "* $(B, 4*6, 10, 10)$ (from 'conv_8_2')\n",
@@ -116,7 +59,7 @@
     "* $(B, 4*4, 3, 3)$ (from 'conv_10_2')\n",
     "* $(B, 4*4, 1, 1)$ (from 'conv_11_2')\n",
     "\n",
-    "Returning to the images of the priors above, the left/middle/right image shows the priors corresponding 'conv_10_2'/'conv_8_2'/'conv_4_3' layers, respectively.\n",
+    "Returning to the images of the priors above, the left/middle/right image shows the priors corresponding 'conv_10_2'/'conv_8_2'/'conv_4_3' layers, respectively.  The lower layers (e.g. 'conv_4_3', 'conv_7') are responsible for smaller objects, while the higher layers (e.g. 'conv_10_2', 'conv_11_2') are responsible for larger objects.\n",
     "\n",
     "Now it is clear where the number 8732 comes from, since \n",
     "\n",
@@ -126,7 +69,7 @@
     "\n",
     "The output of the localization head is the concatenation of the six tensors above, which results in a tensor of size $(B, 8732, 4)$.\n",
     "\n",
-    "Similarly, the output of the classification head corresponding to 'conv_4_3' is a tensor of size $(B, C*4, 38, 38)$, where $C$ is the number of classes, and all other numbers are the same as before.  Repeating this process for all six of the convolution layers, the output of the classification head is comprised of tensors of size:\n",
+    "Similarly, the output of the classification head corresponding to 'conv_4_3' is a tensor of size $(B, C*4, 38, 38)$, where $C$ is the number of classes (including a background class), and all other numbers are the same as before.  Repeating this process for all six of the convolution layers, the output of the classification head is comprised of tensors of size:\n",
     "* $(B, C*4, 38, 38)$ (from 'conv_4_3')\n",
     "* $(B, C*6, 19, 19)$ (from 'conv_7')\n",
     "* $(B, C*6, 10, 10)$ (from 'conv_8_2')\n",
@@ -144,15 +87,15 @@
    "source": [
     "### How to interpret the model outputs?\n",
     "\n",
-    "The output of the classification head is easier to understand.  Given an image (i.e. batch size $B=1$), the classification head outputs are class logits for each prior.  Given a particular prior, the classification head output is $(\\ell_1, \\ell_2, \\ldots, \\ell_{C})$, where $C$ is the number of classes and $\\ell_j$, $j=1,\\ldots, C$, is the logit for class $j$.  The class probabilities are $(p_1, p_2, \\ldots, p_{C})$ are computed via the softmax function, i.e.\n",
+    "The output of the classification head is easier to understand.  Given an image (i.e. batch size $B=1$), the classification head outputs are class logits for each prior.  Given a particular prior, the classification head output is $(\\ell_1, \\ell_2, \\ldots, \\ell_{C})$, where $C$ is the number of classes (not including background) and $\\ell_j$, $j=1,\\ldots, C$, is the logit for class $j$.  The class probabilities are $(p_1, p_2, \\ldots, p_{C})$ are computed via the softmax function, i.e.\n",
     "\\begin{equation*}\n",
     "    p_{j} = \\frac{e^{\\ell_{j}}}{\\sum_{i=1}^{C}e^{\\ell_{i}}}, \\quad j=1,2,\\ldots,C.\n",
     "\\end{equation*}\n",
     "\n",
-    "If the classification score corresponding to a particular prior $p = (c_{x}^{p}, c_{y}^{p}, w^{p}, h^{p})$ is high, that means a GT box $g = (c_{x}^{g}, c_{y}^{g}, w^{g}, h^{g})$ should be 'close' to $p$.  The localization head does not predict locations of objects, it predicts offsets to priors of the form $(t_x, t_y, t_w, t_h)$, where\n",
-    "\\begin{equation*}\n",
+    "If the classification score corresponding to a particular prior $p = (c_{x}^{p}, c_{y}^{p}, w^{p}, h^{p})$ is high (i.e. greater than a predetermined threshold), that means a GT box $g = (c_{x}^{g}, c_{y}^{g}, w^{g}, h^{g})$ should be 'close' to $p$.  The localization head does not predict locations of objects, it predicts offsets to priors of the form $(t_x, t_y, t_w, t_h)$, where\n",
+    "\\begin{equation}\n",
     "t_{x} = \\frac{c_{x}^{\\hat{g}} - c_{x}^{p}}{w^{p}v_{c}}, \\quad t_{y} = \\frac{c_{y}^{\\hat{g}} - c_{y}^{p}}{h^{p}v_{c}}, \\quad t_{w} = \\frac{\\log(w^{\\hat{g}}/w^{p})}{v_{s}}, \\quad t_{h} = \\frac{\\log(h^{\\hat{g}}/h^{p})}{v_{s}},\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "where $\\hat{g}=(c_{x}^{\\hat{g}}, c_{y}^{\\hat{g}}, w^{\\hat{g}}, h^{\\hat{g}})$ is the predicted bounding box.  Let us reiterate that the GT box $g$ is unknown and $(t_x, t_y, t_w, t_h)$ are the predicted values, so our predicted bounding box has coordinates \n",
     "\\begin{equation*}\n",
     "c_{x}^{\\hat{g}} = c_{x}^{p} + t_{x}w^{p}v_{c}, \\quad c_{y}^{\\hat{g}} = c_{y}^{p} + t_{y}h^{p}v_{c}, \\quad w^{\\hat{g}} = w^{p}\\mathrm{e}^{t_{w}v_{s}}, \\quad h^{\\hat{g}} = h^{p}\\mathrm{e}^{t_{h}v_{s}}.\n",
@@ -160,12 +103,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "366f61ee",
+   "cell_type": "markdown",
+   "id": "725778d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Non-maximum suppression (NMS)\n",
+    "\n",
+    "What does NMS do? Let's look at our model's predictions on the above image without NMS.\n",
+    "\n",
+    "![Prediction without NMS](figures/pred_no_nms.gif)\n",
+    "\n",
+    "As we saw previously, there can be many priors that have a reasonable overlap with a given GT object.  Our model should give a high classification score (above a user set threshold) for many of the priors nearby a GT object.  In this case, there are 9 predictions for this single car.\n",
+    "\n",
+    "NMS chooses the prior with the highest classification score and then deletes (or suppresses) other predictions that have a high IoU score with the top scoring prior.  This IoU threshold is a parameter that is chosen by the user.\n",
+    "\n",
+    "![Prediction with NMS](figures/pred_after_nms.png)\n",
+    "![Prediction with NMS, threshold too high](figures/pred_nms_thresh_too_high.png)\n",
+    "\n",
+    "In the figure above on the right, we can see what happens if the IoU threshold is too high.  For each selected box, we remove every remaining box whose IoU with it exceeds the NMS threshold; boxes whose IoU is below or equal to the threshold survive to the next step. Therefore, lowering the threshold makes NMS more aggressive (fewer boxes left), and raising it makes NMS less aggressive.  It is to be noted that better predictions appeared in the .gif above that got suppressed but this is due to poor performance of the model and not the implementation of NMS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cb78a55",
+   "metadata": {},
+   "source": [
+    "### How is the model trained?\n",
+    "\n",
+    "During training, each image’s ground-truth boxes are first matched to the fixed set of priors. For every prior (p_k) and GT box (g_i), an overlap score (IoU or complete IoU) is computed; each prior is assigned the GT with highest overlap, and each GT is also guaranteed at least one “best prior” via a forced match. A prior is marked positive if its best overlap with its assigned GT exceeds a chosen threshold (e.g. 0.5) or if it is the forced best prior for some GT; all remaining priors are negatives (background). For each positive prior, the target regression offsets $(t_{x}, t_{y}, t_{w}, t_{h})$ are computed in the standard SSD parameterization: both prior and GT are expressed as normalized $(c_x, c_y, w, h)$, and the target offsets are given in eq. (1) above, where $(v_c, v_s)$ are variance hyperparameters. This yields `loc_target` $\\in \\mathbb{R}^{P×4}$ and `cls_target`$\\in\\{0,…,C-1\\}^P$, with class $0$ reserved for background and positives shifted by $+1$ from their foreground indices.\n",
+    "\n",
+    "The loss is a combination of localization and classification terms. Localization loss (Smooth L1) is applied only to positive priors, comparing predicted offsets `loc[k]` to targets $(t_{x}, t_{y}, t_{w}, t_{h})$ and normalized by the number of positives $N_{\\text{pos}}$. Classification loss is a multi-class cross-entropy on the logits `conf[k]` with targets `cls_target[k]`, but computed only on all positives plus a subset of negatives chosen by hard negative mining. For each negative prior, compute its classification loss (how badly the model misclassifies it as foreground), sort negatives by this loss, and keep at most `neg_pos_ratio × N_pos` of the hardest ones (e.g. $3:1$ ratio); easy negatives with near-zero loss are discarded. The final classification loss is averaged over positives plus these selected negatives and typically combined with the localization loss as $L = L_{\\text{loc}} + \\alpha L_{\\text{cls}}$, giving gradients that focus on all positives and the most informative (hard) background examples.\n"
+   ]
   }
  ],
  "metadata": {
